--- a/tcl/board/or1k_generic.cfg
+++ b/tcl/board/or1k_generic.cfg
@@ -1,7 +1,7 @@
 # If you want to use the VJTAG TAP, you must set your FPGA TAP ID here
 set FPGATAPID 0x020b30dd
 # Choose your TAP core (VJTAG or MOHOR)
-set TAP_TYPE VJTAG
+set TAP_TYPE MOHOR
 # Set your chip name
 set CHIPNAME or1200
 
